# esp32-s3-4

./: CMakeLists.txt  ESP-IDF_5.5_兼容性修复说明.md  README.md  sdkconfig  sdkconfig.old  构建问题解决指南.md  检查ESP-IDF环境.bat  补充说明.txt  项目诊断工具.bat
components/Data_declaration/: Data_declaration.c
components/Data_declaration/include/: Data_declaration.h
components/External_communication/: CMakeLists.txt
components/External_communication/UDP_TCP/: UDP_TCP.c
components/External_communication/UDP_TCP/include/: UDP_TCP.h
components/External_communication/WIFI/: WIFI.c
components/External_communication/anotc_client_v4.34/: anotc.c
components/External_communication/remote_control/: remote_control.c
components/LED/: CMakeLists.txt  LED.c
components/LED/include/: LED.h
components/VBAT/: CMakeLists.txt  VBAT.c
components/VBAT/include/: VBAT.h
components/flight_control/: CMakeLists.txt
components/flight_control/IMU/: IMU.c
components/flight_control/IMU/include/: IMU.h
components/flight_control/PID/: PID.c
components/flight_control/PID/include/: PID.h
components/flight_control/PWM/: PWM.c
components/flight_control/control/: control.c
components/flight_control/control/include/: control.h
components/inside_communication/: CMakeLists.txt
components/inside_communication/IIC/: IIC.c
components/inside_communication/SPI/: SPI.c
components/inside_communication/UART/: UART.c
components/sensor/: CMakeLists.txt
components/sensor/MPU6050/: MPU6050.c
components/sensor/SPL06-001/: SPL06-001.c
esp32-s3-s-pcb/: BOM_esp32-s3-4_PCB.xlsx
main/: main.c
(+7 files in other folders)
